# fm-agent-service

./: .env.example  .gitignore  Dockerfile  HEADER_FORWARDING_REQUIREMENTS.md  LOGGING_OBSERVABILITY_RESTORATION.md  MILESTONE_IMPLEMENTATION_COMPLETE.md  README.md  SERVICE_EXTRACTION_MAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  generate-docs.yml  policy-no-direct-k8s-deploy.yml  test.yml
scripts/: generate_readme.py
src/agent_service/: main.py  models_compat.py
src/agent_service/api/routes/: __init__.py  agent.py
src/agent_service/core/: __init__.py
src/agent_service/core/agent/: troubleshooting_agent.py
src/agent_service/core/investigation/: __init__.py  hypothesis_manager.py  llm_schemas.py  memory_manager.py  milestone_engine.py  strategy_selector.py  workflow_progression_detector.py  working_conclusion_generator.py
src/agent_service/core/prompts/: __init__.py  few_shot_examples.py  phase_prompts.py  prompt_manager.py  response_prompts.py  system_prompts.py
src/agent_service/infrastructure/llm/: __init__.py  anthropic_provider.py  base.py  fireworks_provider.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  multi_provider.py  openai_provider.py  simple_provider.py  stub_provider.py
src/agent_service/infrastructure/logging/: __init__.py  config.py  context.py  middleware.py  unified.py
src/agent_service/infrastructure/observability/: __init__.py  (+1 more)
tests/infrastructure/: test_logging_integration.py
tests/integration/: test_e2e_workflow.py
tests/unit/: test_multi_provider_fallback.py
(+11 files in other folders)
