[tool.poetry]
name = "fm-agent-service"
version = "0.1.0"
description = "FaultMaven AI Agent Orchestration Microservice"
authors = ["FaultMaven Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
redis = "^5.0.0"
httpx = "^0.25.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
prometheus-client = "^0.18.0"
python-json-logger = "^2.0.0"

# FaultMaven Core Library
fm-core-lib = {git = "https://github.com/FaultMaven/fm-core-lib.git", branch = "main"}

# LangGraph Agent Framework
langgraph = "^0.1.2"

# LLM Observability
opik = "^0.2.1"

# Utilities
tenacity = "^8.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
